--- a/app/assets/stylesheets/suppliers.css.scss
+++ b/app/assets/stylesheets/suppliers.css.scss
@@ -5,6 +5,6 @@
 #map {
   width:  600px;
   height: 400px;
-  border: 1px solid #999;
-  margin: 30px 10px;
+  border: 8px solid #000014;
+  margin: 30px auto;
 }
