--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="topbanner">
-    <p>Mjölk</p>
+    <p>Milk<b>man</b></p>
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/suppliers">Suppliers</a></li>
