--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,10 +1,9 @@
-<h1>Listing categories</h1>
+<h1>Categories</h1>
 
 <table>
   <thead>
     <tr>
       <th>Name</th>
-      <th></th>
       <th></th>
       <th></th>
     </tr>
@@ -13,8 +12,7 @@
   <tbody>
     <% @categories.each do |category| %>
       <tr>
-        <td><%= category.name %></td>
-        <td><%= link_to 'Show', category %></td>
+        <td><%= link_to category.name, category %></td>
         <td><%= link_to 'Edit', edit_category_path(category) %></td>
         <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
