Rätta till färgerna i menyn

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -104,6 +104,16 @@ div {
   height: 40px;
 } 
 
+#topbanner a {
+  color: #666;
+  &:visited {
+    color: #666;
+  }
+  &:hover {
+    color: #fff;
+  }
+}
+
 #milk {
   background-image: image-url("milk.png");
   width: 373px;
