--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :custom_js do %>
-  <%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?key=#{@apikey}&libraries=geometry&sensor=false" %>
+  <%= javascript_include_tag "//maps.googleapis.com/maps/api/js?key=#{@apikey}&libraries=geometry&sensor=false" %>
 <% end %>
 
 <h1>Suppliers</h1>
