--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -36,4 +36,4 @@
 </p>
 
 <%= link_to 'Edit', edit_supplier_path(@supplier) %> |
-<%= link_to 'Back', suppliers_path %>
+<%= link_to 'Back', suppliers_path, :data => {no_turbolink: true} %>
