--- a/app/views/suppliers/edit.html.erb
+++ b/app/views/suppliers/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @supplier %> |
-<%= link_to 'Back', suppliers_path %>
+<%= link_to 'Back', suppliers_path, :data => {no_turbolink: true} %>
