--- a/app/views/suppliers/new.html.erb
+++ b/app/views/suppliers/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', suppliers_path %>
+<%= link_to 'Back', suppliers_path, :data => {no_turbolink: true} %>
