--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,6 +4,7 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Icon</th>
       <th></th>
       <th></th>
     </tr>
@@ -13,6 +14,7 @@
     <% @categories.each do |category| %>
       <tr>
         <td><%= link_to category.name, category %></td>
+        <td><%= image_tag category.icon %></td>
         <td><%= link_to 'Edit', edit_category_path(category) %></td>
         <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
