--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,6 +4,9 @@
   <strong>Name:</strong>
   <%= @category.name %>
 </p>
-
+<p>
+  <strong>Icon:</strong>
+  <%= image_tag @category.icon %>
+</p>
 <%= link_to 'Edit', edit_category_path(@category) %> |
 <%= link_to 'Back', categories_path %>
