--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= yield :custom_js %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <link href='http://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div id="topbanner">
@@ -14,7 +15,7 @@
       <li><%= link_to "Home", "/", :data => {no_turbolink: true} %></li>
       <li><%= link_to "Suppliers", "/suppliers", :data => {no_turbolink: true} %></li>
       <li><%= link_to "Categories", "/categories" %></li>
-      <li><%= link_to "About" %></li>
+      <li><%= link_to "About", "/about" %></li>
     </ul>
   </div>  
   <div id="content">
