--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -22,7 +22,7 @@
   <tbody>
     <% @suppliers.each do |supplier| %>
       <tr>
-        <td><%= link_to supplier.name, supplier %></td>
+        <td><%= link_to supplier.name, supplier, :data => {no_turbolink: true} %></td>
         <td><%= supplier.address %></td>
         <td><%= supplier.zip %></td>
         <td><%= supplier.country %></td>
