--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -1,32 +1,21 @@
+<% content_for :custom_js do %>
+  <%= javascript_include_tag "//maps.googleapis.com/maps/api/js?key=#{@apikey}&libraries=geometry&sensor=false" %>
+<% end %>
+
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
+<h1>
   <%= @supplier.name %>
+</h1>
+
+<p>
+  <%= @supplier.address %><br>
+  <%= @supplier.zip %><br>
+  <%= @supplier.country %><br>
 </p>
 
 <p>
-  <strong>Address:</strong>
-  <%= @supplier.address %>
-</p>
-
-<p>
-  <strong>Zip:</strong>
-  <%= @supplier.zip %>
-</p>
-
-<p>
-  <strong>Country:</strong>
-  <%= @supplier.country %>
-</p>
-
-<p>
-  <strong>Email:</strong>
   <%= mail_to @supplier.email %>
-</p>
-
-<p>
-  <strong>Phone:</strong>
   <%= @supplier.phone %>
 </p>
 
@@ -37,3 +26,5 @@
 
 <%= link_to 'Edit', edit_supplier_path(@supplier) %> |
 <%= link_to 'Back', suppliers_path, :data => {no_turbolink: true} %>
+
+<div id="map" />
