--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -1,1 +1,37 @@
-<h1>About</h1>
+<div class="start">
+  <h1>Om Milkman</h1>
+  <p class="text2">
+    Välkommen till Milkman, ett verktyg för hantering av leverantörer och leverantörskategorier. 
+    Applikationen är ett arbetsprov för Standout AB, utfört av Erik Lindqvist, och är utvecklat
+    i Ruby on Rails.
+  </p>
+
+  <h2>Systemkrav</h2>
+  <div class="text2">
+    För att kunna köra applikationen behöver följande kriterier vara uppfyllda:
+    <ul>
+      <li>Ruby on Rails >= 4.0.0</li>
+      <li>Ruby >= 2.0.0 (Kan möjligen fungera med 1.9.3 också men det är inte verifierat).</li>
+    </ul>    
+  </div>
+  
+  <h2>Nerladdning</h2>
+  <p class="text2">
+    Koden är öppen för alla och senaste versionen går att ladda ner från <a href='https://github.com/eriklindqvist/standout/archive/master.zip'>GitHub</a>    
+  </p>
+  
+  <h2>Installation</h2>
+  <div class="text2">
+    Nedan är en kort beskrivning över installationsförfarandet:
+    <ol>
+      <li>Installera Ruby</li>
+      <li>Installera Rails</li>
+      <li>Ladda ner källkoden till Milkman</li>
+      <li>Kör kommandot 'bundle install'</li>
+      <li>Komfigurera din databas genom att redigera filen config/database.yml</li>
+      <li>Kör kommandot 'rake db:migrate'</li>
+      <li>Starta webservern genom att köra kommandot 'rails server'</li>
+    </ol>
+    För mer information, se respektive mjukvaras installationshänvisningar.
+  </div>
+</div>
