--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -54,13 +54,12 @@ pre {
 }
 
 a {
-  color: #000;
+  color: #666;
   &:visited {
     color: #666;
   }
   &:hover {
-    color: #fff;
-    background-color: #000;
+    color: #000;
   }
 }
 
@@ -143,4 +142,17 @@ div {
   @include gradient(#cca, #eed, 300px);
   border: 1px solid #334;
   @include shadow(0, 0, 30px, -5px, #000);
+}
+
+table {
+  border-collapse:collapse;
+  width: 100%;
+}
+  
+thead {
+  text-align:left;
+}
+
+tr:hover td {
+  background-color: #ccd;
 }
