--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -12,11 +12,10 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :name %>
     <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :icon %><br>
+    <br>
+    <%= f.label :icon %>
     <%= f.text_field :icon %>
   </div>
   <div class="actions">
