--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -28,7 +28,7 @@
       <li>Installera Rails</li>
       <li>Ladda ner källkoden till Milkman</li>
       <li>Kör kommandot 'bundle install'</li>
-      <li>Komfigurera din databas genom att redigera filen config/database.yml</li>
+      <li>Konfigurera din databas genom att redigera filen config/database.yml</li>
       <li>Kör kommandot 'rake db:migrate'</li>
       <li>Starta webservern genom att köra kommandot 'rails server'</li>
     </ol>
