Supplier.category måste finnas för att supplier.category.name ska fungera

--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -21,7 +21,7 @@
 
 <p>
   <strong>Category:</strong>
-  <%= @supplier.category.name if @supplier.category_id? %>
+  <%= @supplier.category.name if @supplier.category_id? and @supplier.category != nil %>
 </p>
 
 <%= link_to 'Edit', edit_supplier_path(@supplier) %> |
